<resources>
    <string name="app_name">RGB Controller</string>
    <string name="colorpicker_dialog">Color Picker</string>
    <string name="R">R(Red)</string>
    <string name="G">G(Green)</string>
    <string name="B">B(Blue)</string>
    <string name="RGB">RGB</string>
    <string name="Hex">Hex</string>
    <string name="CMYK">CMYK</string>
    <string name="setup_wifi">Setup WiFi</string>
    <string name="ip_address">IP Address</string>
    <string name="port_number">Port Number</string>
    <string name="set">Set</string>
</resources>
