<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nishchal.rgbcontroller.MainActivity">

    <TextView
        android:id="@+id/r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/R"
        android:textSize="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/rseekbar"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/rvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:text="0"
        android:textSize="25dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/gvalue"
        app:layout_constraintLeft_toRightOf="@+id/textView7"
        android:layout_marginStart="32dp" />

    <SeekBar
        android:id="@+id/rseekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="4dp"
        android:max="255"
        android:progress="1"
        app:layout_constraintBottom_toTopOf="@+id/g"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/G"
        android:textSize="25dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/gseekbar"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/gvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:text="0"
        android:textSize="25dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/bvalue"
        app:layout_constraintLeft_toRightOf="@+id/rvalue"
        android:layout_marginStart="32dp" />

    <SeekBar
        android:id="@+id/gseekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:max="255"
        android:progress="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="6dp"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/b"
        android:layout_marginEnd="6dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/B"
        android:textSize="25dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bseekbar"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/bvalue"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="0"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/hexvalue"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toRightOf="@+id/gvalue"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <SeekBar
        android:id="@+id/bseekbar"
        android:layout_width="378dp"
        android:layout_height="20dp"
        android:layout_marginBottom="16dp"
        android:max="255"
        android:progress="1"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp" />

    <TextView
        android:id="@+id/hexvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/colorviewer"
        android:layout_marginEnd="91dp" />

    <Button
        android:id="@+id/colorviewer"
        android:layout_width="256dp"
        android:layout_height="130dp"
        android:layout_marginEnd="16dp"
        android:elevation="0dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:textSize="20dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/gethexcode"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.278"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hex"
        android:textSize="25dp"
        app:layout_constraintRight_toLeftOf="@+id/hexvalue"
        android:layout_marginRight="58dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/hexvalue"
        android:layout_marginLeft="62dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="58dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RGB"
        android:textSize="25dp"
        android:layout_marginLeft="62dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/rvalue"
        android:layout_marginStart="62dp" />

    <EditText
        android:id="@+id/gethexcode"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="Enter hex value"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/getcolor"
        app:layout_constraintHorizontal_bias="1.0"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/sendbutton"
        android:layout_marginEnd="9dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/sendbutton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/getcolor"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:text="Get Color"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorviewer"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintRight_toLeftOf="@+id/sendbutton"
        android:layout_marginRight="0dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/sendbutton"
        android:layout_width="83dp"
        android:layout_height="46dp"
        android:text="Send"
        android:textSize="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        tools:layout_editor_absoluteY="449dp"
        tools:layout_editor_absoluteX="285dp" />


</android.support.constraint.ConstraintLayout>
